--- a/style/style.css
+++ b/style/style.css
@@ -11,11 +11,15 @@
 * {
   margin: 0;
   padding: 0;
+  text-decoration: none;
   box-sizing: border-box;
+  list-style: none;
 }
 
 /* Body styling */
-
+body {
+  min-height: 100vh;
+}
 /* Header */
 header {
   border-bottom: 50px solid var(--ui-effects-color); /* Blue border below the entire menu */
@@ -33,6 +37,7 @@ a {
 h1 {
   font-size: 2.5rem;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 h3 {
@@ -42,7 +47,7 @@ h3 {
 }
 
 main {
-  margin-bottom: 20px;
+  margin: 0;
 }
 
 footer>h1 {
@@ -77,7 +82,12 @@ footer>h1 {
   list-style-type: none;
   display: flex;
   justify-content: space-around;
+  margin: 20px;
   gap: 20px;
+}
+
+.nav-menu li {
+  display: inline-block;
 }
 
 /* Section styling for Cards*/
@@ -102,18 +112,21 @@ footer>h1 {
 .nav-menu li a {
   text-decoration: none;
   color: var(--text-color);
-  display: block;
   font-size: 16px;
+  padding: 7px 13px;
+  border-radius: 3px;
   transition: color 0.3s ease;
 }
 
-.nav-menu li a:hover {
-  color: var(--ui-effects-color); /* Highlight color on hover */
+/* Active/Clicked styles */
+.nav-menu li a:hover{
+  color: var(--blog-bg-color); /* Highlight color on hover */
+  background: var(--ui-effects-color);
 }
 
-/* Active/Clicked styles */
 .nav-menu li a.active {
-  color: var(--button-color); /* Highlight the active link */
+  color: var(--blog-bg-color); /* Highlight color on hover */
+  background: var(--ui-effects-color);
 }
 
 /* Bottom border for active/hover */
@@ -158,9 +171,8 @@ footer>h1 {
 /* Banner image styling */
 .banner{
   display: flex; /* Using CSS Grid for 2 columns */
-  align-items: center; /* Aligns content vertically */
-  justify-content: space-between; /* Spreads columns evenly */  
   margin-bottom: 30px;
+  word-wrap: normal;
 }
 
 .banner-image {
@@ -170,8 +182,9 @@ footer>h1 {
 }
 
 .banner-image img {
-  width: 100%; /* Makes the image responsive */
-  height: auto; /* Maintains the image's aspect ratio */
+  width: 100%; /* Make the image fit horizontally */
+  height: 100%; /* Make the image fit vertically */
+  object-fit: cover; /* Ensure the image covers the container without distortion */
   clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
@@ -180,8 +193,10 @@ footer>h1 {
   flex: 1; /* Allows the text to take up one portion of the banner */
   color: var(--text-color, --ui-text-color);
   padding-right: 20px; /* Adds spacing between text and image */
-  margin: 0 10%;
+  margin: 5% 10%;
   justify-content: center;
+  word-wrap: break-word; /* Force word breaks to fit content */
+  white-space: normal;   /* Allow wrapping of text */
 }
 
 .banner-slogan p {
@@ -292,6 +307,49 @@ footer>h1 {
   font-weight: bold;
 }
 
+/*Featured Product Area styling */
+.featured-area{
+  justify-content: center;
+  margin: 100px 30px 150px;
+}
+
+.featured-area-section{
+  margin: 30px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.featured-area-section-img img{
+  width: 100%;
+  height: auto;
+  margin: 20px;
+}
+
+.featured-prod-desc{
+  margin: 20px;
+}
+
+.featured-prod-desc h3{
+  margin: 30px;
+}
+
+.featured-area h1 {
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+  color: var(--ui-effects-color);
+}
+
+.featured-prod-title {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.featured-icon {
+  width: 6%; /* Icon width */
+  height: 6%; /* Icon height */
+  margin: 10px; /* Adds spacing between icon and text */
+}
+
 /*Blog Area styling */
 .blog-area{
   background-color: var(--blog-bg-color);
@@ -320,6 +378,109 @@ footer>h1 {
   padding-left: 10px;
 }
 
+/* Footer Banner styling */
+.footer-banner{
+  display: flex; /* Using CSS Grid for 2 columns */
+  word-wrap: normal;
+  margin-top: 80px;
+}
+
+.footer-banner-image {
+  flex:1; /* Allows the image to take up one portion of the banner */
+  max-width: 50%; /* Image occupies half of the banner width */
+  text-align: right;
+}
+
+.footer-banner-image img {
+  width: 100%; /* Make the image fit horizontally */
+  height: 100%; /* Make the image fit vertically */
+  object-fit: cover; /* Ensure the image covers the container without distortion */
+  clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
+}
+
+/* Footer Banner slogan styling */
+.footer-banner-slogan {
+  flex: 1; /* Allows the text to take up one portion of the banner */
+  color: var(--text-color, --ui-text-color);
+  margin: 0 5%;
+  justify-content: center;
+}
+
+.footer-banner-slogan p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+/* Footer Card Section styling*/
+.footer-card-section {
+  display: flex;
+  margin: 10px;
+}
+
+.footer-card-section h1 {
+  color: var(--ui-effects-color);
+}
+
+.footer-card-icon {
+  display: flex;
+  align-items: center; 
+  margin: 10px;
+  padding: auto;
+}
+
+.footer-card-icon img {
+  width: 70px;
+  height: auto;
+  margin: 20px;
+}
+
+.footer-card-desc {
+  margin: 20px;
+}
+
+.footer-card-desc h3 {
+  margin: 20px 0px;
+}
+
+.footer-card-desc p {
+  font-size: 1rem;
+  justify-content: center;
+}
+
 .footer-end-area {
+  color: var(--blog-bg-color);
   background-color: var(--ui-effects-color);
+}
+
+.footer-end-area h3 {
+  color: var(--blog-bg-color);
+  text-align: center;
+  margin: 20px 10px;
+}
+
+.footer-end-section {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.footer-end-left{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer-end-left h1 {
+  font-size: 50px;
+  margin: -7px 0;
+}
+
+.footer-end-left>p {
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.footer-end-socials {
+  display: flex;
+  justify-content: space-evenly;
 }
